fix: Z-index on navbar

--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -8,6 +8,7 @@ nav {
   box-shadow: 0 6px 3px -2px rgba(0, 0, 0, 0.301);
   flex-wrap: wrap;
   width: 100%;
+  z-index: 1;
 
   p {
     margin: 0;
